--- a/halloweengally.html
+++ b/halloweengally.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Halloween Wallpapers</title>
+
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <a href="index.html">Go Home</a>
     <!--using 3 images with a href tag to link the source-->
-    <section>
+    <div>
         <!--used one heading here-->
         <h2>Set A New Desktop Wallpaper for Halloween SZN!!!</h2>
         <p>Here is a variety of selected free images linked to Upspalsh website:</p>
@@ -19,9 +21,9 @@
         <a href="https://unsplash.com/photos/OJy0JHnoUZQ"><img src="https://images.unsplash.com/photo-1598983870677-01e066a0b901?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80" height="300"></a>
 
         <a href="https://unsplash.com/photos/wlOv3cf41iE"><img src="https://images.unsplash.com/photo-1604149370100-2cf3be3bc845?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1974&q=80" height="300"></a>
-    </section>
+    </div>
 <!--Included a table to provide steps/ directions-->
-    <section>
+    <div>
         <table>
             <tr>
                 <th>Steps</th>
@@ -59,7 +61,7 @@
             
 
         </table>
-    </section>
+    </div>
 
 </body>
 </html>
