--- a/selectahand.html
+++ b/selectahand.html
@@ -4,20 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pick a Hand</title>
+
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <a href="index.html">Go Home</a>
 <!--listed 2 images with a link to source-->
-    <section>
-        <h2>What hand will you choose?</h2>
-        <p>Please take a moment to consider which hand you want to open (click).  Each hand opens a link to next Horror movie you must watch! (it is a free stream) Ahahaha...</p>
+    <div id="box-model">
+        <h1>What hand will you choose?</h1>
+        <p>Please take a moment to consider which hand you want to open (click).  Each hand opens a link to next Horror movie you must watch! Ahahaha...
         <a href="https://therokuchannel.roku.com/watch/45362d6f0eea50849907e8b8cdc5d624?source=google">
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQK_d6WmSELw1zaf4A1Cr_2AJFdbk7O0RclCQ&usqp=CAU" alt"left Hand">
         </a>
         <a href="https://www.redbox.com/ondemand-movies/halloween-1978?source=googlefeed">
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRz5GJJ7vkUWNZ6uYEZxFPyQ9Fi5DZsuOLWQg&usqp=CAU" alt"right Hand">
-        </a>
-    </section>
+        </a></p>
+    </div>
     
 </body>
 </html>
