--- a/index.html
+++ b/index.html
@@ -4,32 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Halloween To Do List</title>
+
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!--Asking User to enter First name and LAst Name using a form-->
-    <section>
+   
+    <!--Using ul and li tags to create a list-->
+    <div class="section-1">
+        <h1>Halloween Spirit</h1>
+            <ol>
+                <li><a href="selectahand.html">Randomly select a Horror Movie here</a></li>
+                <li><a href="halloweengally.html">View Free Halloween desktop wallpaper here</a></li>
+                <li>Name a villian you are scared of?</li>
+            </ol>
+        </div>
+
+     <!--Asking User to enter First name and LAst Name using a form-->
+     <div>
         <!--Used heading here-->
-        <h1>Please Enter your Name Please</h1>
+        <p>Type the name of a villian you are scared of?</p>
 
         <form>
         <label for="firsname">First name:</label>
         <br>
-        <input type="text" id="firstname" name="firstname">
+        <input type="text" id="firstname" name="firstname" class="redbox">
         <br>
-        <label for="lastname">Last name:</label><br>
-        <input type="text" id="lastname" name="lastname">
         <br>
         <input type="submit" value="Submit">
         </form> 
-    </section>
-    <!--Using ul and li tags to create a list-->
-    <section>
-        <h1>The Halloween WFH To Do List</h1>
-            <ul>
-                <li><a href="selectahand.html">Randomly select a Horror Movie here</a></li>
-                <li><a href="halloweengally.html">View Free Halloween desktop wallpaper here</a></li>
-            </ul>
-    </section>
+    </div>
     
 </body>
 </html>
